Add manual trigger for auto translation

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -267,6 +267,9 @@
             <!-- Übersetzungsfortschritt -->
             <div class="translate-progress" id="translateProgress">
                 <div class="translate-status" id="translateStatus">Übersetze...</div>
+                <div class="translate-actions">
+                    <button id="startTranslateButton" class="translate-action-btn">Automatische Übersetzung starten</button>
+                </div>
                 <div class="progress-bar">
                     <div class="progress-fill" id="translateFill"></div>
                 </div>
