Move auto translation control to system toolbar

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -157,6 +157,7 @@
                             <div class="group-main">
                                 <h3 id="toolbarSystemTitle" class="group-title">System</h3>
                                 <div class="group-buttons">
+                                    <button id="startTranslateButton" class="btn btn-blue">Automatische Übersetzung</button>
                                     <div class="menu-wrapper">
                                         <button id="systemMenuToggle" class="btn btn-secondary menu-toggle" data-menu-toggle="systemMenu" aria-haspopup="true" aria-expanded="false">Verwaltung</button>
                                         <div class="workspace-dropdown workspace-dropdown--wide" id="systemMenu" role="menu">
@@ -267,9 +268,6 @@
             <!-- Übersetzungsfortschritt -->
             <div class="translate-progress" id="translateProgress">
                 <div class="translate-status" id="translateStatus">Übersetze...</div>
-                <div class="translate-actions">
-                    <button id="startTranslateButton" class="translate-action-btn">Automatische Übersetzung starten</button>
-                </div>
                 <div class="progress-bar">
                     <div class="progress-fill" id="translateFill"></div>
                 </div>
