--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -453,50 +453,78 @@
                 • Pipe-Liste: <code>Dateiname|EN Text|DE Text</code><br>
                 • Der Import erkennt automatisch, welche Spalte die Dateinamen enthält
             </p>
-            <div style="margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
-                <button class="btn btn-secondary" id="importFileButton" onclick="triggerImportFile()">📂 Datei auswählen</button>
-                <span id="importFileName" style="color: #ccc; font-size: 13px;">Keine Datei ausgewählt</span>
-                <input type="file" id="importFileInput" style="display: none;" accept=".txt,.wiki,.csv,.pipe,.log,.md,.json,*/*" onchange="handleImportFile(event)">
-            </div>
-            <textarea id="importData" placeholder="Füge hier deine Daten ein..."></textarea>
-            
-            <!-- Column Selection (hidden initially) -->
-            <div id="columnSelection" style="display: none; margin-top: 20px; padding: 15px; background: #1a1a1a; border: 1px solid #444; border-radius: 6px;">
-                <h4 id="columnSelectionTitle" style="color: #ff6b1a; margin-bottom: 15px;">📋 Spalten-Zuordnung</h4>
-                <p id="columnSelectionDescription" style="margin-bottom: 15px; color: #999; font-size: 13px;">
-                    Bitte wählen Sie aus, welche Spalten welche Inhalte enthalten:
-                </p>
-
-                <div style="margin-bottom: 15px;">
-                    <label id="filenameColumnLabel" style="display: block; margin-bottom: 5px; color: #ccc;">Dateinamen-Spalte:</label>
-                    <select id="filenameColumn" style="width: 100%; padding: 8px; background: #1a1a1a; border: 1px solid #444; border-radius: 4px; color: #e0e0e0;" onchange="updatePreviewHighlighting()">
-                        <option value="">-- Bitte auswählen --</option>
-                    </select>
-                    <div id="filenameColumnHint" style="font-size: 11px; color: #666; margin-top: 3px;">
-                        💡 Intelligente Erkennung basierend auf Datenbank und Patterns
+            <div class="import-dialog-layout">
+                <div class="import-dialog-panel import-dialog-panel--sidebar">
+                    <h4>📂 Soundevents (exports_alyx)</h4>
+                    <p class="import-description" style="font-size: 12px; margin-bottom: 10px;">
+                        Vorschau aller .wiki-Dateien im Ordner <code>soundevents/exports_alyx</code>. So erkennst du direkt, welche Dateien und Ordner bereitstehen.
+                    </p>
+                    <div class="soundevent-status" id="soundeventExportsStatus">Nur in der Desktop-Version verfügbar.</div>
+                    <div class="soundevent-table-wrapper">
+                        <table class="soundevent-table">
+                            <thead>
+                                <tr>
+                                    <th>Ordner</th>
+                                    <th>Datei</th>
+                                    <th>Zeilen</th>
+                                    <th>Zuletzt</th>
+                                </tr>
+                            </thead>
+                            <tbody id="soundeventExportsBody"></tbody>
+                        </table>
+                    </div>
+                    <div class="soundevent-actions">
+                        <button class="btn btn-secondary" id="soundeventReloadButton" type="button">↻ Neu laden</button>
+                        <button class="btn btn-primary" id="soundeventImportButton" type="button" disabled>📥 In Formular übernehmen</button>
                     </div>
                 </div>
+                <div class="import-dialog-panel import-dialog-panel--main">
+                    <div style="margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
+                        <button class="btn btn-secondary" id="importFileButton" onclick="triggerImportFile()">📂 Datei auswählen</button>
+                        <span id="importFileName" style="color: #ccc; font-size: 13px;">Keine Datei ausgewählt</span>
+                        <input type="file" id="importFileInput" style="display: none;" accept=".txt,.wiki,.csv,.pipe,.log,.md,.json,*/*" onchange="handleImportFile(event)">
+                    </div>
+                    <textarea id="importData" placeholder="Füge hier deine Daten ein..."></textarea>
 
-                <div style="margin-bottom: 15px;">
-                    <label id="englishColumnLabel" style="display: block; margin-bottom: 5px; color: #ccc;">Englischer Text-Spalte:</label>
-                    <select id="englishColumn" style="width: 100%; padding: 8px; background: #1a1a1a; border: 1px solid #444; border-radius: 4px; color: #e0e0e0;" onchange="updatePreviewHighlighting()">
-                        <option value="">-- Bitte auswählen --</option>
-                    </select>
-                </div>
+                    <!-- Column Selection (hidden initially) -->
+                    <div id="columnSelection" style="display: none; margin-top: 20px; padding: 15px; background: #1a1a1a; border: 1px solid #444; border-radius: 6px;">
+                        <h4 id="columnSelectionTitle" style="color: #ff6b1a; margin-bottom: 15px;">📋 Spalten-Zuordnung</h4>
+                        <p id="columnSelectionDescription" style="margin-bottom: 15px; color: #999; font-size: 13px;">
+                            Bitte wählen Sie aus, welche Spalten welche Inhalte enthalten:
+                        </p>
 
-                <div style="margin-bottom: 15px;">
-                    <label id="germanColumnLabel" style="display: block; margin-bottom: 5px; color: #ccc;">Deutsche Text-Spalte (optional):</label>
-                    <select id="germanColumn" style="width: 100%; padding: 8px; background: #1a1a1a; border: 1px solid #444; border-radius: 4px; color: #e0e0e0;" onchange="updatePreviewHighlighting()">
-                        <option value="">-- Keine / Nicht vorhanden --</option>
-                    </select>
-                </div>
+                        <div style="margin-bottom: 15px;">
+                            <label id="filenameColumnLabel" style="display: block; margin-bottom: 5px; color: #ccc;">Dateinamen-Spalte:</label>
+                            <select id="filenameColumn" style="width: 100%; padding: 8px; background: #1a1a1a; border: 1px solid #444; border-radius: 4px; color: #e0e0e0;" onchange="updatePreviewHighlighting()">
+                                <option value="">-- Bitte auswählen --</option>
+                            </select>
+                            <div id="filenameColumnHint" style="font-size: 11px; color: #666; margin-top: 3px;">
+                                💡 Intelligente Erkennung basierend auf Datenbank und Patterns
+                            </div>
+                        </div>
 
-                <!-- Preview Table -->
-                <div id="previewTable" style="margin-top: 15px;">
-                    <h5 id="previewTableTitle" style="color: #ff6b1a; margin-bottom: 10px;">🔍 Vorschau (erste 3 Zeilen):</h5>
-                    <div style="overflow-x: auto; max-height: 200px; border: 1px solid #444; border-radius: 4px;">
-                        <table id="previewTableContent" style="width: 100%; font-size: 12px;">
-                        </table>
+                        <div style="margin-bottom: 15px;">
+                            <label id="englishColumnLabel" style="display: block; margin-bottom: 5px; color: #ccc;">Englischer Text-Spalte:</label>
+                            <select id="englishColumn" style="width: 100%; padding: 8px; background: #1a1a1a; border: 1px solid #444; border-radius: 4px; color: #e0e0e0;" onchange="updatePreviewHighlighting()">
+                                <option value="">-- Bitte auswählen --</option>
+                            </select>
+                        </div>
+
+                        <div style="margin-bottom: 15px;">
+                            <label id="germanColumnLabel" style="display: block; margin-bottom: 5px; color: #ccc;">Deutsche Text-Spalte (optional):</label>
+                            <select id="germanColumn" style="width: 100%; padding: 8px; background: #1a1a1a; border: 1px solid #444; border-radius: 4px; color: #e0e0e0;" onchange="updatePreviewHighlighting()">
+                                <option value="">-- Keine / Nicht vorhanden --</option>
+                            </select>
+                        </div>
+
+                        <!-- Preview Table -->
+                        <div id="previewTable" style="margin-top: 15px;">
+                            <h5 id="previewTableTitle" style="color: #ff6b1a; margin-bottom: 10px;">🔍 Vorschau (erste 3 Zeilen):</h5>
+                            <div style="overflow-x: auto; max-height: 200px; border: 1px solid #444; border-radius: 4px;">
+                                <table id="previewTableContent" style="width: 100%; font-size: 12px;">
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
