Add soundevent import feedback

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -477,6 +477,10 @@
                         <button class="btn btn-secondary" id="soundeventReloadButton" type="button">↻ Neu laden</button>
                         <button class="btn btn-primary" id="soundeventImportButton" type="button" disabled>📥 In Formular übernehmen</button>
                     </div>
+                    <div class="soundevent-progress" id="soundeventImportProgress" aria-live="polite" aria-hidden="true">
+                        <span class="soundevent-progress__spinner" aria-hidden="true"></span>
+                        <span class="soundevent-progress__text" id="soundeventImportProgressText">Übernehme Soundevents…</span>
+                    </div>
                 </div>
                 <div class="import-dialog-panel import-dialog-panel--main">
                     <div style="margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
