feat: add bulk soundevent import

--- a/web/hla_translation_tool.html
+++ b/web/hla_translation_tool.html
@@ -476,7 +476,9 @@
                     <div class="soundevent-actions">
                         <button class="btn btn-secondary" id="soundeventReloadButton" type="button">↻ Neu laden</button>
                         <button class="btn btn-primary" id="soundeventImportButton" type="button" disabled>📥 In Formular übernehmen</button>
+                        <button class="btn btn-success" id="soundeventImportAllButton" type="button" disabled>🚀 Alle Soundevents importieren</button>
                     </div>
+                    <p class="soundevent-bulk-hint">Automatischer Stapelimport: Lädt jede Datei nacheinander, analysiert sie und startet den Import ohne weitere Klicks.</p>
                     <div class="soundevent-progress" id="soundeventImportProgress" aria-live="polite" aria-hidden="true">
                         <span class="soundevent-progress__spinner" aria-hidden="true"></span>
                         <span class="soundevent-progress__text" id="soundeventImportProgressText">Übernehme Soundevents…</span>
